fix: carousel swiper styles, pagination dots, nav buttons alignment

--- a/src/styles/base/media-queries.css
+++ b/src/styles/base/media-queries.css
@@ -154,6 +154,10 @@
       );
   }
 
+  #uber-uns .container {
+    padding-right: 2.8em;
+  }
+
   .container,
   #catalogs .container,
   footer {
