--- a/src/styles/sections/carousel.css
+++ b/src/styles/sections/carousel.css
@@ -1,12 +1,48 @@
+#product-portfolio {
+  position: relative;
+  padding-top: clamp(3rem, 10vw + 1rem, 10rem);
+  overflow: hidden;
+}
+
+.deco-element-sphere-two {
+  position: absolute;
+  top: 0;
+  left: 61%;
+  background: url(/assets/deco_element_sphere_two.webp) no-repeat;
+  background-size: contain;
+  height: clamp(7.125rem, 10.703vw + 1.867rem, 11.5rem);
+  width: clamp(7.125rem, 12.538vw + 0.966rem, 12.25rem);
+}
+
+.deco-element-sphere-four {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: url(/assets/deco_element_sphere_four.webp) no-repeat;
+  background-size: contain;
+  background-position: top right;
+  height: clamp(10rem, 25.54vw + 4.014rem, 27rem);
+  width: clamp(12.5rem, 8.92vw + 10.409rem, 18.438rem);
+}
+
+.deco-element-sphere-three {
+  position: absolute;
+  bottom: 0;
+  background: url(/assets/deco_element_sphere_three.webp) no-repeat;
+  background-size: contain;
+  height: clamp(10.75rem, 9.39vw + 8.549rem, 17rem);
+  width: clamp(11.75rem, 9.39vw + 9.549rem, 18rem);
+}
+
 .swiper-carousel {
-  padding-top: 5em;
+  padding-top: 5em !important;
   max-width: 140em;
 }
 
 .slide-content {
   position: relative;
   max-width: clamp(14.5rem, 20.282vw + 9.746rem, 28rem);
-  height: clamp(14.5rem, 20.282vw + 9.746rem, 28rem);
+  height: clamp(14.5rem, 20.282vw + 9.746rem, 28rem) !important;
   border-radius: 1.5em;
   overflow: hidden;
 }
@@ -54,11 +90,13 @@
   padding: 3em 0;
   margin-bottom: 6.25em;
   position: relative;
+  width: 100%;
 }
 
 .swiper-pagination-dots {
   display: flex;
-  margin: 0 auto;
+  justify-content: center;
+  flex: 1;
   gap: 0.75em;
 }
 
@@ -74,8 +112,8 @@
 }
 
 .swiper-pagination-bullet {
-  width: clamp(0.75rem, 0.536vw + 0.643rem, 1.125rem);
-  height: clamp(0.75rem, 0.536vw + 0.643rem, 1.125rem);
+  width: clamp(0.75rem, 0.536vw + 0.643rem, 1.125rem) !important;
+  height: clamp(0.75rem, 0.536vw + 0.643rem, 1.125rem) !important;
   background: rgb(217, 217, 217);
   opacity: 1;
   filter: drop-shadow(0px 4px 12px rgba(58, 56, 55, 0.15));
@@ -83,9 +121,9 @@
 }
 
 .swiper-pagination-bullet-active {
-  width: 5.25em;
-  border-radius: 1.75em;
-  background: hsla(223, 27%, 17%, 1);
+  width: 5.25em !important;
+  border-radius: 1.75em !important;
+  background: hsla(223, 27%, 17%, 1) !important;
   box-shadow: 0px 4px 12px 0px rgba(58, 56, 55, 0.25);
 }
 
@@ -93,6 +131,11 @@
   display: flex;
   position: absolute;
   right: 11%;
+}
+
+.swiper-btn-prev svg,
+.swiper-btn-next svg {
+  display: block;
 }
 
 .swiper-btn-prev,
